--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
           </ul>
 
           <div class="mobile-connect">
-            <a class="contacts-tel-burger" href="tel:+11000111-11-11"
+            <a class="contacts-tel-burger link" href="tel:+11000111-11-11"
               >+11 (000) 111-11-11</a
             >
-            <a class="contacts" href="mailto:info@devstudio.com"
+            <a class="contacts link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
             <ul class="mobile-list">
@@ -234,7 +234,7 @@
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
               </div>
-              <div>
+              <div class="list-links">
                 <ul class="icon-list">
                   <li class="team-social">
                     <a href="" class="social-link">
@@ -278,7 +278,7 @@
                 <h3 class="title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
               </div>
-              <div>
+              <div class="list-links">
                 <ul class="icon-list">
                   <li class="team-social">
                     <a href="" class="social-link">
@@ -325,7 +325,7 @@
                 <h3 class="title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
               </div>
-              <div>
+              <div class="list-links">
                 <ul class="icon-list">
                   <li class="team-social">
                     <a href="" class="social-link">
@@ -372,7 +372,7 @@
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
               </div>
-              <div>
+              <div class="list-links">
                 <ul class="icon-list">
                   <li class="team-social">
                     <a href="" class="social-link">
@@ -414,42 +414,42 @@
           <ul class="customers-list list">
             <li class="item">
               <a href="" class="customers">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="110" height="56">
                   <use href="./image/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="customers">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="110" height="56">
                   <use href="./image/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="customers">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="110" height="56">
                   <use href="./image/icons.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="customers">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="110" height="56">
                   <use href="./image/icons.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="customers">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="110" height="56">
                   <use href="./image/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="customers">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="110" height="56">
                   <use href="./image/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
