--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
           >
           <ul class="site-nav list">
             <li class="item nav-relative">
-              <a href="./index.html" class="link current">Studio</a>
+              <a href="./index.html" class="link">Studio</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="link current">Portfolio</a>
             </li>
             <li class="item"><a href="" class="link">Contacts</a></li>
           </ul>
@@ -76,10 +76,10 @@
           </button>
           <ul class="mobile-menu">
             <li class="item">
-              <a class="menu-link current" href="index.html">Studio</a>
+              <a class="menu-link" href="index.html">Studio</a>
             </li>
             <li class="item">
-              <a class="menu-link" href="portfolio.html">Portfolio</a>
+              <a class="menu-link current" href="portfolio.html">Portfolio</a>
             </li>
             <li class="item">
               <a class="menu-link" href="">Contacts</a>
